tests/samples/block-switch-after-default/template.blate
// error: {:case} used after {:default}
{@switch x}{:default}other{:case 'a'}a{/switch}
